--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@prisma/client": "^5.19.1",
     "@react-google-maps/api": "^2.19.3",
+    "@react-three/drei": "^9.114.0",
+    "@react-three/fiber": "^8.17.9",
     "bcryptjs": "^2.4.3",
-    "framer-motion": "^11.5.2",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.10.0",
     "http-errors": "^2.0.0",
     "jose": "^5.9.2",
     "next": "14.2.7",
@@ -22,7 +25,9 @@
     "react-icons": "^5.3.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.26.2",
-    "three": "^0.168.0"
+    "tailwind-merge": "^2.5.2",
+    "three": "^0.168.0",
+    "three-globe": "^2.32.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
