--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@iconify/react": "^5.0.2",
     "@prisma/client": "^5.19.1",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-radio-group": "^1.2.1",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@react-google-maps/api": "^2.19.3",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-three/drei": "^9.114.0",
@@ -19,12 +26,19 @@
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "framer-motion": "^11.10.0",
+    "@vercel/analytics": "^1.3.1",
+    "class-variance-authority": "^0.7.0",
     "http-errors": "^2.0.0",
     "jose": "^5.9.2",
     "localforage": "^1.10.0",
+    "jotai": "^2.10.0",
+    "lucide-react": "^0.446.0",
     "next": "14.2.7",
+    "next-themes": "^0.3.0",
     "nodemailer": "^6.9.15",
+    "radix-ui": "^1.0.1",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-player": "^2.16.0",
@@ -35,7 +49,8 @@
     "tailwind-merge": "^2.5.2",
     "three": "^0.168.0",
     "three-globe": "^2.32.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
