--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-google-maps/api": "^2.19.3",
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.9",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "framer-motion": "^11.10.0",
@@ -27,7 +28,8 @@
     "react-router-dom": "^6.26.2",
     "tailwind-merge": "^2.5.2",
     "three": "^0.168.0",
-    "three-globe": "^2.32.0"
+    "three-globe": "^2.32.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
