--- a/package.json
+++ b/package.json
@@ -22,16 +22,17 @@
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.9",
     "@reduxjs/toolkit": "^2.2.8",
+    "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
-    "clsx": "^2.1.1",
-    "framer-motion": "^11.10.0",
-    "@vercel/analytics": "^1.3.1",
     "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^11.11.4",
     "http-errors": "^2.0.0",
     "jose": "^5.9.2",
-    "localforage": "^1.10.0",
     "jotai": "^2.10.0",
+    "localforage": "^1.10.0",
     "lucide-react": "^0.446.0",
     "next": "14.2.7",
     "next-themes": "^0.3.0",
@@ -39,6 +40,7 @@
     "radix-ui": "^1.0.1",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
+    "react-day-picker": "^9.1.3",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-player": "^2.16.0",
@@ -46,7 +48,7 @@
     "react-router-dom": "^6.26.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.5.3",
     "three": "^0.168.0",
     "three-globe": "^2.32.0",
     "xlsx": "^0.18.5",
