--- a/package.json
+++ b/package.json
@@ -11,21 +11,27 @@
   "dependencies": {
     "@prisma/client": "^5.19.1",
     "@react-google-maps/api": "^2.19.3",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.9",
+    "@reduxjs/toolkit": "^2.2.8",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "framer-motion": "^11.10.0",
     "http-errors": "^2.0.0",
     "jose": "^5.9.2",
+    "localforage": "^1.10.0",
     "next": "14.2.7",
     "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-player": "^2.16.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "tailwind-merge": "^2.5.2",
     "three": "^0.168.0",
     "three-globe": "^2.32.0",
