--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lucide-react": "^0.446.0",
     "next": "14.2.7",
     "next-themes": "^0.3.0",
+    "next-auth": "^4.24.8",
     "nodemailer": "^6.9.15",
     "radix-ui": "^1.0.1",
     "react": "^18",
