--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.9",
     "@reduxjs/toolkit": "^2.2.8",
+    "@tsparticles/engine": "^3.5.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.5.0",
     "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "framer-motion": "^11.11.4",
+    "framer-motion": "^11.11.9",
     "http-errors": "^2.0.0",
     "jose": "^5.9.2",
     "jotai": "^2.10.0",
@@ -49,7 +52,7 @@
     "react-router-dom": "^6.26.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "tailwind-merge": "^2.5.3",
+    "tailwind-merge": "^2.5.4",
     "three": "^0.168.0",
     "three-globe": "^2.32.0",
     "xlsx": "^0.18.5",
