--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "@tsparticles/slim": "^3.5.0",
     "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.7",
+    "@tweenjs/tween.js": "^25.0.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.9",
+    "gsap": "^3.12.5",
     "http-errors": "^2.0.0",
     "jose": "^5.9.2",
     "jotai": "^2.10.0",
