--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-router-dom": "^6.26.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.4",
     "three": "^0.168.0",
     "three-globe": "^2.32.0",
