--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.9",
     "@reduxjs/toolkit": "^2.2.8",
+    "@tanstack/react-table": "^8.20.5",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
@@ -53,6 +54,7 @@
     "radix-ui": "^1.0.1",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
+    "react-credit-cards-2": "^1.0.3",
     "react-day-picker": "^9.1.3",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
