--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-credit-cards-2": "^1.0.3",
+    "react-datepicker": "^7.5.0",
     "react-day-picker": "^9.1.3",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
