--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-day-picker": "^9.1.3",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-phone-input-2": "^2.15.1",
     "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
