--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "sharp": "^0.33.5",
+    "shimmer-effects-react": "^1.0.4",
     "tailwind-merge": "^2.5.4",
     "three": "^0.168.0",
     "three-globe": "^2.32.0",
