--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jotai": "^2.10.0",
     "localforage": "^1.10.0",
     "lucide-react": "^0.446.0",
+    "moment": "^2.30.1",
     "next": "14.2.7",
     "next-auth": "^4.24.8",
     "next-themes": "^0.3.0",
@@ -60,6 +61,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-phone-input-2": "^2.15.1",
+    "react-moment": "^1.1.3",
     "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
