--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@google/generative-ai": "^0.21.0",
     "@iconify/react": "^5.0.2",
     "@prisma/client": "^5.21.1",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -41,6 +42,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.9",
+    "google-auth-library": "^9.14.2",
     "gsap": "^3.12.5",
     "http-errors": "^2.0.0",
     "jose": "^5.9.2",
