--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@ramonak/react-progress-bar": "^5.3.0",
     "@react-google-maps/api": "^2.19.3",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-three/drei": "^9.114.0",
@@ -62,8 +63,8 @@
     "react-day-picker": "^9.1.3",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "react-phone-input-2": "^2.15.1",
     "react-moment": "^1.1.3",
+    "react-phone-input-2": "^2.15.1",
     "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
