--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.1",
     "@fullcalendar/common": "^5.11.5",
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
@@ -36,6 +37,7 @@
     "@tsparticles/slim": "^3.5.0",
     "@tweenjs/tween.js": "^25.0.0",
     "@vercel/analytics": "^1.3.1",
+    "apexcharts": "^4.1.0",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -56,7 +58,7 @@
     "nodemailer": "^6.9.15",
     "radix-ui": "^1.0.1",
     "react": "^18",
-    "react-apexcharts": "^1.4.1",
+    "react-apexcharts": "^1.6.0",
     "react-credit-cards-2": "^1.0.3",
     "react-datepicker": "^7.5.0",
     "react-day-picker": "^9.1.3",
