--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@ramonak/react-progress-bar": "^5.3.0",
     "@react-google-maps/api": "^2.19.3",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-three/drei": "^9.114.0",
@@ -59,6 +60,7 @@
     "radix-ui": "^1.0.1",
     "react": "^18",
     "react-apexcharts": "^1.6.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-credit-cards-2": "^1.0.3",
     "react-datepicker": "^7.5.0",
     "react-day-picker": "^9.1.3",
